# CPP-MatrixOPs-CMLEAIMT-tt

./: .replit  CMakeLists.txt  README.md  app.py  build.sh  pyproject.toml  replit.nix  setup.py
attached_assets/: Pasted--home-runner-workspace-pythonlibs-lib-python3-11-site-packages-setuptools-config-apply-pyprojectto-1741957871566.txt  Pasted--home-runner-workspace-pythonlibs-lib-python3-11-site-packages-setuptools-config-apply-pyprojectto-1741958121303.txt  Pasted--home-runner-workspace-pythonlibs-lib-python3-11-site-packages-setuptools-config-apply-pyprojectto-1741958425261.txt  Pasted-Connection-error-Connection-failed-with-status-502-and-response-DOCTYPE-html-html-lang-en--1741959090466.txt
src/: bindings.cpp  matrix.cpp  matrix.hpp  neural.cpp  neural.hpp  optimizations.cpp  optimizations.hpp
tests/: test_matrix.cpp  test_neural.cpp
